# platanus-hack-26-ar-team-28

./: .gitignore  LICENSE  README.md  platanus-hack-project.json  project-description.md
agent/: .env.example  README.md  pyproject.toml
agent/skills/vibefence-guard/: SKILL.md
agent/tests/: test_cursor_installer.py  test_discovery.py  test_e2e_agent_flows.py  test_intent_llm.py  test_policy.py  test_redact.py  test_redteam_advanced.py  test_rollback_parser.py
agent/vibefence/: __init__.py  __main__.py  cli.py  cloud_client.py  discovery.py  local_api.py
agent/vibefence/installers/: claude_code.py  cursor.py
agent/vibefence/lib/: config.py  log.py  redact.py  snapshot_index.py
agent/vibefence/lib/schemas/: __init__.py  enums.py  heartbeat.py  hook.py  models.py  pairing.py
agent/vibefence/policy/: engine.py  injection.py  intent_llm.py  risk.py  trust.py
agent/vibefence/redteam/: auth_agent.py  cartographer.py  evidence_agent.py  method_tampering_agent.py  runner.py  scope.py  sql_injection_agent.py  unauth_agent.py
agent/vibefence/sandbox/: parallel_schema.py
agent/vibefence/snapshot/: db_snapshot.py
docs/: ARCHITECTURE.md  POSITIONING.md  deploy.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
frontend/__tests__/: api-boundaries.test.ts  runner-token.test.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: header.tsx  hero.tsx  logo.tsx  mobile-menu.tsx  pillar-illustrations.tsx  reveal.tsx  (+2 more)
scripts/: smoke_test_pairing.py  sync_schemas.py
supabase/: config.toml
(+84 files in other folders)
