[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibefence"
version = "0.1.0"
description = "Vibefence local agent — MCP trust gateway, agentic red-team, and snapshot/sandbox runner"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Vibefence" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "websockets>=13.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
redteam = ["playwright>=1.49"]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.13"]
all = [
    "mcp>=1.2",
    "playwright>=1.49",
    "anthropic>=0.40",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.13",
]

[project.scripts]
vibefence = "vibefence.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vibefence"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
